--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -531,8 +531,8 @@
                             <div className="absolute inset-0 z-50 flex items-center justify-center bg-black/60 backdrop-blur-sm p-10" onClick=${(e) => {
                         if (e.target === e.currentTarget) setShowExamplesModal(false);
                     }}>
-                                <div className=${`w-full max-w-2xl max-h-full overflow-hidden rounded-xl shadow-2xl flex flex-col transform transition-all scale-100 ${darkMode ? 'bg-slate-900 border border-slate-700' : 'bg-white border border-gray-200'}`}>
-                                    <div className=${`flex justify-between items-center p-4 border-b shrink-0 ${darkMode ? 'border-slate-700 bg-slate-800' : 'border-gray-200 bg-gray-50'}`}>
+                                <div className=${`w-full max-w-2xl max-h-full overflow-hidden rounded-xl shadow-2xl flex flex-col transform transition-all scale-100 ${darkMode ? 'bg-black border border-neutral-800 text-white' : 'bg-white border border-gray-200'}`}>
+                                    <div className=${`flex justify-between items-center p-4 border-b shrink-0 ${darkMode ? 'border-neutral-800 bg-black' : 'border-gray-200 bg-gray-50'}`}>
                                         <h2 className="font-bold text-lg flex items-center">
                                             <span className="mr-2 text-xl">📂</span> Load Example Template
                                         </h2>
@@ -541,7 +541,7 @@
                                     <div className="p-6 overflow-y-auto">
                                         <div className="grid grid-cols-1 gap-4">
                                             ${Object.entries(TEMPLATES).map(([name, template]) => html`
-                                                <div className=${`p-4 rounded-lg border transition-all hover:shadow-md ${darkMode ? 'bg-slate-800 border-slate-700 hover:border-blue-500' : 'bg-white border-gray-200 hover:border-blue-400'}`}>
+                                                <div className=${`p-4 rounded-lg border transition-all hover:shadow-md ${darkMode ? 'bg-slate-700 border-slate-600 hover:bg-slate-600 hover:border-slate-500' : 'bg-white border-gray-200 hover:border-blue-400'}`}>
                                                     <div className="flex justify-between items-start">
                                                         <div>
                                                             <h3 className="font-bold text-lg mb-1 text-blue-500">${name}</h3>
